--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -14,12 +14,20 @@
 
 <body>
     <div class="container">
-        <div class="form">
-            <input type="text" class="input">
-            <input type="submit" class='add' value="Add Task">
-        </div>
-        <div class="tasks">
-        </div>
+        <h1>todos</h1>
+        <form class="form">
+            <div>
+                <input type="text" class="input">
+                <input type="submit" class='add' value="Add Task">
+            </div>
+            <ul class="todo">
+
+            </ul>
+        </form>
+        <small>
+            Left Click To convert to Completed<br>
+            Right Click to Delete the TOdo
+        </small>
     </div>
     <script src="main.js"></script>
 </body>
